resources/templates/securities/security_group.yml
AWSTemplateFormatVersion: 2010-09-09
Description: SecurityGroup in Security Layer

Parameters:
  ServiceName:
    Type: String
    Default: switch_plus
    Description: Enter service name

  Env:
    Type: String
    Default: stg
    AllowedValues:
      - stg
      - prod
    Description: Enter stg or prod


Resources:
  EcsSecurityGroupBefore:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${ServiceName}-ecs-secgroup-before'
      GroupDescription: security group for ecs
      VpcId: !ImportValue VpcId
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${ServiceName}-ecs-secgroup-before'

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${ServiceName}-db-secgroup'
      GroupDescription: security group for db
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EcsSecurityGroupBefore
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${ServiceName}-db-secgroup'

  EcsSecurityGroupAfter:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${ServiceName}-ecs-secgroup-after'
      GroupDescription: security group for ecs
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          DestinationSecurityGroupId: !Ref DBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${ServiceName}-ecs-secgroup-after'


  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${ServiceName}-alb-secgroup'
      GroupDescription: security group for alb
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          DestinationSecurityGroupId: !Ref EcsSecurityGroupAfter
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          DestinationSecurityGroupId: !Ref EcsSecurityGroupAfter
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${ServiceName}-alb-secgroup'

Outputs:
  SecGroupECS:
    Value: !Ref EcsSecurityGroupAfter
    Export:
      Name: SecGroupECS
  SecGroupDb:
    Value: !Ref DBSecurityGroup
    Export:
      Name: SecGroupDb
  SecGroupAlb:
    Value: !Ref AlbSecurityGroup
    Export:
      Name: SecGroupAlb
